{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 80,
  "lineage": "c14d0330-2957-e577-7f0b-579e61ad5f91",
  "resources": [
    {
      "module": "module.eks_project.module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_cidr_blocks",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:security-group-rule/sgr-0021a310213df8630",
            "cidr_ipv4": "172.17.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from CIDR blocks",
            "from_port": null,
            "id": "sgr-0021a310213df8630",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e2df73fc1068080",
            "security_group_rule_id": "sgr-0021a310213df8630",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_project.module.eks_cluster.aws_eks_cluster.default",
            "module.eks_project.module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.aws_iam_role.default",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_project.module.eks_cluster.aws_kms_key.cluster",
            "module.eks_project.module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_project.module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.data.aws_partition.current",
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_network_acl_rule.private4_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private4_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private6_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private6_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public4_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public4_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public6_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public6_ingress",
            "module.eks_project.module.subnets.aws_route.nat4",
            "module.eks_project.module.subnets.aws_route.nat_instance",
            "module.eks_project.module.subnets.aws_route.private6",
            "module.eks_project.module.subnets.aws_route.private_nat64",
            "module.eks_project.module.subnets.aws_route.public",
            "module.eks_project.module.subnets.aws_route.public6",
            "module.eks_project.module.subnets.aws_route.public_nat64",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.aws_route_table_association.private",
            "module.eks_project.module.subnets.aws_route_table_association.public",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.eks_project.module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.eks_project.module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.complete",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.default",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.opted_in",
            "module.eks_project.module.vpc.aws_internet_gateway.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_project.module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_security_groups",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:security-group-rule/sgr-0305428af304ba0aa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": null,
            "id": "sgr-0305428af304ba0aa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ff6a4846788e5b1b",
            "security_group_id": "sg-00e2df73fc1068080",
            "security_group_rule_id": "sgr-0305428af304ba0aa",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_project.module.eks_cluster.aws_eks_cluster.default",
            "module.eks_project.module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.aws_iam_role.default",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_project.module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_project.module.eks_cluster.aws_kms_key.cluster",
            "module.eks_project.module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_project.module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_project.module.eks_cluster.data.aws_partition.current",
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_network_acl_rule.private4_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private4_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private6_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.private6_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public4_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public4_ingress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public6_egress",
            "module.eks_project.module.subnets.aws_network_acl_rule.public6_ingress",
            "module.eks_project.module.subnets.aws_route.nat4",
            "module.eks_project.module.subnets.aws_route.nat_instance",
            "module.eks_project.module.subnets.aws_route.private6",
            "module.eks_project.module.subnets.aws_route.private_nat64",
            "module.eks_project.module.subnets.aws_route.public",
            "module.eks_project.module.subnets.aws_route.public6",
            "module.eks_project.module.subnets.aws_route.public_nat64",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.aws_route_table_association.private",
            "module.eks_project.module.subnets.aws_route_table_association.public",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.eks_project.module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.eks_project.module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.complete",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.default",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.eks_project.module.subnets.module.utils.data.aws_regions.opted_in",
            "module.eks_project.module.vpc.aws_internet_gateway.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3c2630b68b84bfb",
            "arn": "arn:aws:ec2:us-east-1:058264138725:elastic-ip/eipalloc-0e3c2630b68b84bfb",
            "association_id": "eipassoc-0b6243e316e622692",
            "domain": "vpc",
            "id": "eipalloc-0e3c2630b68b84bfb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07955fb24137f89a5",
            "private_dns": "ip-172-17-98-12.ec2.internal",
            "private_ip": "172.17.98.12",
            "public_dns": "ec2-23-23-130-12.compute-1.amazonaws.com",
            "public_ip": "23.23.130.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "barkuni-dev-eks-nat-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "barkuni-dev-eks-nat-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3c2630b68b84bfb",
            "association_id": "eipassoc-0b6243e316e622692",
            "connectivity_type": "public",
            "id": "nat-000b9ced6bb65c516",
            "network_interface_id": "eni-07955fb24137f89a5",
            "private_ip": "172.17.98.12",
            "public_ip": "23.23.130.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ca129fa12441fd2",
            "tags": {
              "Attributes": "nat",
              "Name": "barkuni-dev-eks-nat-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "barkuni-dev-eks-nat-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:network-acl/acl-0eea87c7a8ee14bde",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eea87c7a8ee14bde",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264138725",
            "subnet_ids": [
              "subnet-0be152efce8c8e65f",
              "subnet-0e0464491777b3227"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:network-acl/acl-05bca9f0f56a52033",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05bca9f0f56a52033",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 111,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264138725",
            "subnet_ids": [
              "subnet-0460be9f9a6c47230",
              "subnet-09ca129fa12441fd2"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3979865105",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eea87c7a8ee14bde",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-830723203",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eea87c7a8ee14bde",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_egress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3279640815",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0eea87c7a8ee14bde",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_ingress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1806190380",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0eea87c7a8ee14bde",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3060444327",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05bca9f0f56a52033",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-333094778",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05bca9f0f56a52033",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_egress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2552633433",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-05bca9f0f56a52033",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_ingress",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1240534229",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-05bca9f0f56a52033",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_network_acl.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c0abb9c84fb57d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000b9ced6bb65c516",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c0abb9c84fb57d4",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d31dad9d48f11801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000b9ced6bb65c516",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d31dad9d48f1180",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat64",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c0abb9c84fb57d42696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000b9ced6bb65c516",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c0abb9c84fb57d4",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d31dad9d48f11802696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000b9ced6bb65c516",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d31dad9d48f1180",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_eip.default",
            "module.eks_project.module.subnets.aws_eip_association.nat_instance",
            "module.eks_project.module.subnets.aws_instance.nat_instance",
            "module.eks_project.module.subnets.aws_nat_gateway.default",
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_security_group.nat_instance",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_ami.nat_instance",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_eip.nat",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5e43463104de236",
            "id": "r-rtb-0216eadf81079f6ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0216eadf81079f6ab",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.vpc.aws_internet_gateway.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public6",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5e43463104de236",
            "id": "r-rtb-0216eadf81079f6ab2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0216eadf81079f6ab",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.vpc.aws_internet_gateway.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:route-table/rtb-06c0abb9c84fb57d4",
            "id": "rtb-06c0abb9c84fb57d4",
            "owner_id": "058264138725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "64:ff9b::/96",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000b9ced6bb65c516",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000b9ced6bb65c516",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:route-table/rtb-04d31dad9d48f1180",
            "id": "rtb-04d31dad9d48f1180",
            "owner_id": "058264138725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "64:ff9b::/96",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000b9ced6bb65c516",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000b9ced6bb65c516",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:route-table/rtb-0216eadf81079f6ab",
            "id": "rtb-0216eadf81079f6ab",
            "owner_id": "058264138725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5e43463104de236",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5e43463104de236",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad65efb1cfe7fda",
            "route_table_id": "rtb-06c0abb9c84fb57d4",
            "subnet_id": "subnet-0be152efce8c8e65f"
          },
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e8e1c8865c4db73",
            "route_table_id": "rtb-04d31dad9d48f1180",
            "subnet_id": "subnet-0e0464491777b3227"
          },
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.private",
            "module.eks_project.module.subnets.aws_subnet.private",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012753a9d8ddaf8b1",
            "route_table_id": "rtb-0216eadf81079f6ab",
            "subnet_id": "subnet-09ca129fa12441fd2"
          },
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8570ac965766a25",
            "route_table_id": "rtb-0216eadf81079f6ab",
            "subnet_id": "subnet-0460be9f9a6c47230"
          },
          "dependencies": [
            "module.eks_project.module.subnets.aws_route_table.public",
            "module.eks_project.module.subnets.aws_subnet.public",
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0be152efce8c8e65f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.0.0/20",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be152efce8c8e65f",
            "ipv6_cidr_block": "2600:1f18:2ee5:b00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-081368a81585116e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0e0464491777b3227",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.16.0/20",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0464491777b3227",
            "ipv6_cidr_block": "2600:1f18:2ee5:b01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-06df62cf6e52ba311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "barkuni-dev-eks-private-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-09ca129fa12441fd2",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ca129fa12441fd2",
            "ipv6_cidr_block": "2600:1f18:2ee5:b06::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09cc55f317110ff81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public-use1a",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0460be9f9a6c47230",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460be9f9a6c47230",
            "ipv6_cidr_block": "2600:1f18:2ee5:b07::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-06d53ed1ac77e70a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "barkuni-dev-eks-public-use1b",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "dependencies": [
            "module.eks_project.module.subnets.data.aws_availability_zones.default",
            "module.eks_project.module.subnets.data.aws_vpc.default",
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:security-group/sg-0ff6a4846788e5b1b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ff6a4846788e5b1b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264138725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "barkuni-dev-eks-default",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "barkuni-dev-eks-default",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_project.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_project.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:internet-gateway/igw-0f5e43463104de236",
            "id": "igw-0f5e43463104de236",
            "owner_id": "058264138725",
            "tags": {
              "Name": "barkuni-dev-eks",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "barkuni-dev-eks",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-00f2c0838b611699e"
          },
          "dependencies": [
            "module.eks_project.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_project.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.eks_project.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:vpc/vpc-00f2c0838b611699e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-014d14b7e5f29f85a",
            "default_route_table_id": "rtb-0c5f347e9b654cf4d",
            "default_security_group_id": "sg-0ff6a4846788e5b1b",
            "dhcp_options_id": "dopt-097d88450c7fc568a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f2c0838b611699e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b72274366b0eceeb",
            "ipv6_cidr_block": "2600:1f18:2ee5:b00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5f347e9b654cf4d",
            "owner_id": "058264138725",
            "tags": {
              "Name": "barkuni-dev-eks",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "barkuni-dev-eks",
              "Namespace": "barkuni",
              "Stage": "dev",
              "kubernetes.io/cluster/barkuni-dev-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}